Work elements added

--- a/index.html
+++ b/index.html
@@ -20,18 +20,27 @@
         <!--Work-->
         <div>
             <h1>Work</h1>
+            <span>Pay -</span>
+            <span id="pay"></span>
+            <button id="workButton";>Work</button>
         </div>
         <hr>
         <!--Laptops-->
         <div>
             <h1>Laptops</h1>
-            <select name="laptops" id="laptops"></select>
-            <span>Price -</span>
-            <span id="price"></span>
+            <div>
+                <select name="laptops" id="laptops"></select>
+                <span>Price -</span>
+                <span id="price"></span>
+            </div>
             <button id="payButton">Pay</button>
-            <h3>Features:</h3>
-            <ul style="list-style: none" id="features"></ul>
-            <span id="stock">In stock: 1</span>
+            <div>
+                <h3>Features:</h3>
+                <ul style="list-style: none" id="features"></ul>
+            </div>
+            <div>
+                <span id="stock">In stock: 1</span>
+            </div>
         </div>
         <script type="text/javascript" src="app.js"></script>
     </body>
