--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
         <hr>
         <!--Work-->
         <div>
-            <h1>Work</h1>
-            <span>Pay -</span>
-            <span id="pay"></span>
+            <div>
+                <h1>Work</h1>
+                <span>Pay - </span>
+                <span id="pay"></span>
+            </div>
             <button id="workButton";>Work</button>
         </div>
         <hr>
