--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
         <div>
             <h1>Bank</h1>
             <div>
-                <h3>Balance </h3>
+                <h3>Balance: </h3>
                 <label id="balanceLabel">25</label>
             </div>
-            <button id="getLoan">Get loan</button>
+            <button id="getLoanButton">Get loan</button>
+            <button id="repayLoanButton">Repay loan</button>
         </div>
+
         <hr>
         <!--Work-->
         <div>
@@ -24,8 +26,10 @@
                 <span>Pay - </span>
                 <span id="pay"></span>
             </div>
-            <button id="workButton";>Work</button>
+            <button id="workButton">Work</button>
+            <button id="bankButton">Bank</button>
         </div>
+
         <hr>
         <!--Laptops-->
         <div>
@@ -37,6 +41,7 @@
             </div>
             <button id="payButton">Pay</button>
             <div>
+                <img id="laptopImage" width=300 src="https://hickory-quilled-actress.glitch.me/assets/images/1.png" alt="Image of laptop">
                 <h3>Features:</h3>
                 <ul style="list-style: none" id="features"></ul>
             </div>
