--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compitable" content="IE-edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Computer Store app</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <!--Bank-->
